--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聖地ルート</title>
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?key=%=VITE_APP_GOOGLEMAP_API%&language=ja&region=JP" 
+    async 
+    defer
+    ></script>
   </head>
   <body>
     <div id="app"></div>
