--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     async 
     defer
     ></script>
+    <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined },
+        version: []
+      };
+    </script>
   </head>
   <body>
     <div id="app"></div>
